--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 .sidebar {
     grid-area: sd;
 }
-.texte1 {color: bisque;
+
 }
 .name {
     text-align: center;
@@ -34,9 +34,7 @@
     color: blanchedalmond;
     background-color: black;
     border-style: double;
-}
-img {
-    max-width: 60%;
+    margin-bottom: 10px;
 }
 
 .section2 {
@@ -56,4 +54,32 @@ p {
 }
 body {
     background-color: black;
+}
+.picture4 {
+    max-width: 50%;
+    padding-left: 3em;
+}
+.picture5 {
+    max-width: 50%;
+    padding-left: 40em;
+    padding-top: 15em;
+
+}
+.title3 {
+    font-size: x-large;
+    color: bisque;
+    padding-left: 2em;
+}
+.picture7 {
+    width: 100%;
+}
+.texte2 {
+    font-size: auto;
+    color: bisque;
+    padding-left: 2em;
+    padding-right: 2em;
+    text-align: right;
+}
+hr {
+    color: blue;
 }
