--- a/style.css
+++ b/style.css
@@ -1,85 +1,148 @@
-.container {
-    padding-left: 6em;
-    background-color: blanchedalmond;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-areas:
-        "hd  hd   hd"
-        "sd  main main"
-        "ft  ft   ft";
-}
-.rectangle {
-    color: blanchedalmond;
-}
-.header {
-    grid-area: hd;
-}
-
-.footer {
-    grid-area: ft;
-}
-
-.content {
-    grid-area: main;
-}
-
-.sidebar {
-    grid-area: sd;
-}
-
-}
-.name {
-    text-align: center;
-    font-size: 6em;
-    color: blanchedalmond;
-    background-color: black;
-    border-style: double;
-    margin-bottom: 10px;
-}
-
-.section2 {
-    font-size: 2em;
-    display: inline-block;
-    flex-direction: wrap;
-}
-
-.section3 {
-    font-size: 1em;
-    display: inline-block;
-    flex-direction: wrap;
-}
-
 p {
-    font-size: 20px;
+    font-size: 15px;
+    color: grey;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 100px;
 }
 body {
-    background-color: black;
+    background-color: lightgray;
 }
 .picture4 {
     max-width: 50%;
     padding-left: 3em;
-}
-.picture5 {
-    max-width: 50%;
-    padding-left: 40em;
-    padding-top: 15em;
-
+    padding-top: 200px;
 }
 .title3 {
     font-size: x-large;
-    color: bisque;
+    color: grey;
     padding-left: 2em;
 }
 .picture7 {
     width: 100%;
 }
+.texte9 {
+    font-size: 1em;
+    color: white;
+    text-align: right;
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
+    top: 600px;
+    left: 200px;
+    padding-right: 2em;
+    padding-left: 100px;
+}
 .texte2 {
     font-size: auto;
-    color: bisque;
     padding-left: 2em;
-    padding-right: 2em;
-    text-align: right;
+    font-family: 'Roboto', sans-serif;
+    padding-left: 285px;
 }
 hr {
-    color: #;
+    color: blanchedalmond;
+    margin-bottom: 200px;
 }
+.picture9 {
+    width: 40%; height: auto;
+    padding: 10px 10px 10px;
+    padding-left: 100px;
+    margin-left: 50px;
+    max-width: 400px;
+}
+.picture10 {
+    width: 40%; height: auto;
+    padding: 10px 10px 10px;
+    margin-left: 50px;
+    max-width: 400px;
+}
+.picture2 {
+    width: 40%; height: auto;
+    padding: 10px 10px 10px;
+    margin-left: 50px;
+    max-width: 400px;
+}
+.text-center {
+    text-align: center;
+  }
+  .row {
+    display: flex;
+  }
+  
+  .column {
+    flex: 33.33%;
+    padding: 5px;
+  }
+  .img-with-text {
+    text-align: justify;
+    width: [width of img];
+    
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+   }
+   body {
+    font-family: cursive;
+   }
+   a {
+    text-decoration: none;
+   }
+   li {
+    list-style: none;
+   }
+   .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color:grey;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+   }
+   .nav-links a {
+    color: #fff;
+   }
+
+   .logo {
+    font-size: 32px;
+   }
+
+   .menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+   }
+   .menu li:hover {
+    background-color:whitesmoke;
+    border-radius: 5px;
+    transition: 0.3s ease;
+   }
+   .menu li {
+    padding: 5px 14px;
+   }
+
+   .services {
+    position: relative; 
+   }
+   .dropdown {
+    background-color: rgb(1, 139, 139);
+    padding: 1em 0;
+    position: absolute;
+    display: none;
+    border-radius: 8px;
+    top: 35px;
+   }
+   .dropdown li + li {
+    margin-top: 10px;
+   }
+   .dropdown li {
+    padding: 0.5em 1em;
+    width: 8em;
+    text-align: center;
+   }
+   .dropdown li:hover {
+    background-color: #4c9e9e;
+   }
+   .services:hover .dropdown {
+    display: block;
+   }
